[package]
name = "ytm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
directories-next = "2.0.0"
image = { version = "0.25.0", features = ["webp", "png", "jpeg"] }
kittyaudio = "0.1.9"
once_cell = "1.19.0"
rand = { version = "0.8.5" }
reqwest = { version = "0.12.1", features = ["json", "blocking"] }
reqwest-streams = "0.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = [] }
tokio = { version = "1.36.0", features = ["macros", "parking_lot", "time"] }
uuid = { version = "1.8.0", features = ['v4', 'fast-rng', 'serde'] }
which = "6.0.1"

[dependencies.material-colors]
git = "https://github.com/Aiving/material-colors"
features = ["serde", "image"]

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "8d1e639c5d34fd9463b0868113612e437973df8c"
# default-features = false
features = ["debug", "lazy", "tokio", "image", "canvas", "advanced", "svg"]

[dependencies.iced_drop]
git = "https://github.com/zeptofine/iced_drop"
branch = "ytmrs"
# path = "../iced_drop"

[dev-dependencies]
tempfile = "3.10.1"
