[package]
name = "ytm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ui
image = { version = "0.25.0", features = ["webp", "png", "jpeg"] }
iced = { version = "0.13.1", features = [
    "debug",
    "lazy",
    "tokio",
    "advanced",
    "image",
] }
lilt = "0.6.0"

async-std = "1.12.0"
directories-next = "2.0.0"
once_cell = "1.19.0"
rand = { version = "0.8.5" }
reqwest = { version = "0.12.1", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = [] }
tokio = { version = "1.36.0", features = ["time", "macros", "parking_lot"] }
uuid = { version = "1.8.0", features = ['v4', 'serde', 'fast-rng'] }
which = "6.0.1"
symphonia = "0.5.4"
itertools = "0.13.0"
tokio-util = { version = "0.7.11", features = ["io"] }
futures-util = "0.3.30"
futures = "0.3.30"
parking_lot = "0.12.3"
kira = { version = "0.9.2", features = ["serde"] }
tempfile = "3.10.1"
fslock = "0.2.1"
fs4 = { version = "0.8.3", features = ["tokio", "async-std"] }
rfd = "0.15.2"


[dependencies.material-colors]
git = "https://github.com/Aiving/material-colors"
features = ["serde", "image"]


[features]
default = ["svg"]

svg = ["iced/svg"]


[profile.release-fat]
inherits = "release"
lto = true
