[project]
name = "ytm-rs-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "zeptofine", email = "xpsychonauticonx@gmail.com" }]
dependencies = [
    "yt-dlp>=2024.3.10",
    "flask>=3.0.2",
    "orjson>=3.9.15",
]
requires-python = ">= 3.10"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
]
