[project]
name = "ytm-rs-backend"
version = "0.1.0"
description = "The backend for the ytm-rs project."
authors = [{ name = "zeptofine", email = "xpsychonauticonx@gmail.com" }]
dependencies = [
    "yt-dlp>=2024.3.10",
    "flask>=3.0.2",
    "orjson>=3.9.15",
    "brotli>=1.1.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
