[project]
name = "ytm-rs"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "zeptofine", email = "xpsychonauticonx@gmail.com" }]
dependencies = [
    "yt-dlp>=2024.3.10",
    "flask>=3.0.2",
    "orjson>=3.9.15",
    "brotli>=1.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ytm_rs"]
